# polyceid

./: ACKNOWLEDGEMENTS  LICENCE  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
examples/: Makefile.am  Makefile.in  README
examples/example01/: Makefile.am  Makefile.in  README  hamiltonian  initial_condition_electrons  input01_o0  input01_o5
examples/example01/reference/: Makefile.am  initial_condition_atoms  initial_condition_electrons  input01_o0
src/: Makefile.am  Makefile.in
src/PolyCEID/: Makefile.am  Makefile.in  PolyCEID_main.c
src/PolyCEID/algebra/: Makefile.am  Makefile.in  PolyCEID_blas.h  PolyCEID_combinatorics.c  PolyCEID_combinatorics.h  PolyCEID_complex.c  PolyCEID_complex.h  PolyCEID_constants.h  PolyCEID_finite_rotations.c  PolyCEID_finite_rotations.h  PolyCEID_lapack.h  PolyCEID_linear_algebra.c  PolyCEID_linear_algebra.h  PolyCEID_matrix.c  PolyCEID_matrix.h  PolyCEID_vector.c  PolyCEID_vector.h
src/PolyCEID/evolution/: Makefile.am  Makefile.in  PolyCEID_Ehrenfest.c  PolyCEID_Ehrenfest.h  PolyCEID_RK2.c  PolyCEID_RK2.h  PolyCEID_RK4.c  PolyCEID_RK4.h  PolyCEID_integrator.c  PolyCEID_integrator.h  PolyCEID_mu.c  PolyCEID_mu.h  PolyCEID_rho_dot.c  PolyCEID_rho_dot.h  PolyCEID_transform_mu.c  PolyCEID_transform_mu.h  PolyCEID_verlet.c  PolyCEID_verlet.h
src/PolyCEID/hamiltonians/: Makefile.am  Makefile.in  PolyCEID_centre_of_mass.c  PolyCEID_centre_of_mass.h  PolyCEID_distances.c  PolyCEID_distances.h  PolyCEID_effective_hamiltonian.c  PolyCEID_effective_hamiltonian.h  PolyCEID_forces.c  PolyCEID_forces.h  PolyCEID_hamiltonian_many.c  PolyCEID_hamiltonian_many.h  PolyCEID_hamiltonian_many_aux.c  PolyCEID_hamiltonian_many_aux.h  PolyCEID_hamiltonian_single.c  PolyCEID_hamiltonian_single.h  PolyCEID_hamiltonian_single_CHAIN_MOD2.c  PolyCEID_hamiltonian_single_CHAIN_MOD2.h  PolyCEID_hamiltonian_single_SSH.c  PolyCEID_hamiltonian_single_SSH.h  PolyCEID_transform_hamiltonian.c  PolyCEID_transform_hamiltonian.h  PolyCEID_transform_hamiltonian_aux.c  PolyCEID_transform_hamiltonian_aux.h
src/PolyCEID/initial/: Makefile.am  Makefile.in  PolyCEID_CI_table.c  PolyCEID_CI_table.h  PolyCEID_indexing.c  PolyCEID_indexing.h  PolyCEID_initial_conditions.c  PolyCEID_initial_conditions.h  PolyCEID_initial_rho_electron.c  PolyCEID_initial_rho_electron.h  PolyCEID_initialise_mu.c  PolyCEID_initialise_mu.h  PolyCEID_initialise_state.c  PolyCEID_initialise_state.h  PolyCEID_normal_modes.c  PolyCEID_normal_modes.h  PolyCEID_relaxation.c  PolyCEID_relaxation.h  PolyCEID_rho_extra_indexing.c  PolyCEID_rho_extra_indexing.h
src/PolyCEID/input/: Makefile.am  Makefile.in  PolyCEID_assign_variable.c  PolyCEID_assign_variable.h  PolyCEID_field.c  PolyCEID_field.h  PolyCEID_input_parsing.c  PolyCEID_input_parsing.h  PolyCEID_list.c  PolyCEID_list.h  PolyCEID_parsing.c  PolyCEID_parsing.h  PolyCEID_start_file.c  PolyCEID_start_file.h
src/PolyCEID/output/: Makefile.am  Makefile.in  PolyCEID_adiabatic_projection.c  PolyCEID_adiabatic_projection.h  PolyCEID_dipole.c  PolyCEID_dipole.h  PolyCEID_dipole_single.c  PolyCEID_dipole_single.h  PolyCEID_energies.c  PolyCEID_energies.h  PolyCEID_energy_corrections.c  PolyCEID_energy_corrections.h  PolyCEID_ionic_density.c  PolyCEID_ionic_density.h  PolyCEID_nonadiabatic_coupling.c  PolyCEID_nonadiabatic_coupling.h  PolyCEID_one_body_electronic_density_matrix.c  PolyCEID_one_body_electronic_density_matrix.h  PolyCEID_one_body_electronic_transition_matrix.c  PolyCEID_one_body_electronic_transition_matrix.h  PolyCEID_output.c  PolyCEID_output.h  PolyCEID_output_general.c  PolyCEID_output_general.h  PolyCEID_rho_norm_and_projection.c  PolyCEID_rho_norm_and_projection.h  PolyCEID_single_level_populations.c  PolyCEID_single_level_populations.h
src/PolyCEID/structures/: Makefile.am  Makefile.in  PolyCEID_structures_atoms.c  PolyCEID_structures_atoms.h  PolyCEID_structures_config.c  PolyCEID_structures_config.h  PolyCEID_structures_constants.c  PolyCEID_structures_constants.h  PolyCEID_structures_electrons.c  PolyCEID_structures_electrons.h  PolyCEID_structures_hamiltonian.c  PolyCEID_structures_hamiltonian.h  PolyCEID_structures_observables.c  PolyCEID_structures_observables.h  PolyCEID_structures_phonons.c  PolyCEID_structures_phonons.h  PolyCEID_structures_state.c  PolyCEID_structures_state.h  PolyCEID_structures_thermostat.c  PolyCEID_structures_thermostat.h
src/PolyCEID/utils/: Makefile.am  Makefile.in  PolyCEID_error.c  PolyCEID_error.h  PolyCEID_sorting.c  PolyCEID_sorting.h  PolyCEID_utilities.c  PolyCEID_utilities.h  my_error.c  my_error.h
