
#  Copyright (C) 2011 by Lorenzo Stella <lorenzo DOT stella77 AT gmail DOT com>

#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:

#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.

#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

#INCLUDES = -I $(srcdir)/../

noinst_LIBRARIES = libalgebra.a

libalgebra_a_SOURCES = \
                   PolyCEID_combinatorics.c \
                   PolyCEID_complex.c \
                   PolyCEID_vector.c \
                   PolyCEID_matrix.c \
                   PolyCEID_linear_algebra.c \
                   PolyCEID_finite_rotations.c

noinst_HEADERS = \
                   PolyCEID_constants.h \
                   PolyCEID_blas.h \
		   PolyCEID_lapack.h \
                   PolyCEID_combinatorics.h \
                   PolyCEID_complex.h \
                   PolyCEID_vector.h \
                   PolyCEID_matrix.h \
                   PolyCEID_linear_algebra.h \
		   PolyCEID_finite_rotations.h

