
#  Copyright (C) 2011 by Lorenzo Stella <lorenzo.stella77@gmail.com>

#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:

#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.

#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

#INCLUDES = -I $(srcdir)/../

noinst_LIBRARIES = libevolution.a

libevolution_a_SOURCES = \
                   PolyCEID_mu.c \
                   PolyCEID_transform_mu.c \
                   PolyCEID_rho_dot.c \
                   PolyCEID_Ehrenfest.c \
                   PolyCEID_verlet.c \
                   PolyCEID_RK2.c \
                   PolyCEID_RK4.c \
                   PolyCEID_integrator.c

noinst_HEADERS = \
                   PolyCEID_mu.h \
                   PolyCEID_transform_mu.h \
                   PolyCEID_rho_dot.h \
                   PolyCEID_Ehrenfest.h \
                   PolyCEID_verlet.h \
                   PolyCEID_RK2.h \
                   PolyCEID_RK4.h \
                   PolyCEID_integrator.h

