
#  Copyright (C) 2011 by Lorenzo Stella <lorenzo DOT stella77 AT gmail DOT com>

#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:

#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.

#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

#INCLUDES = -I $(srcdir)/../

noinst_LIBRARIES = libinitial.a

libinitial_a_SOURCES = \
                   PolyCEID_indexing.c \
                   PolyCEID_rho_extra_indexing.c \
                   PolyCEID_CI_table.c \
		   PolyCEID_relaxation.c \
                   PolyCEID_normal_modes.c \
                   PolyCEID_initial_rho_electron.c \
                   PolyCEID_initial_conditions.c \
                   PolyCEID_initialise_mu.c \
                   PolyCEID_initialise_state.c

noinst_HEADERS = \
                   PolyCEID_indexing.h \
                   PolyCEID_rho_extra_indexing.h \
                   PolyCEID_CI_table.h \
		   PolyCEID_relaxation.h \
                   PolyCEID_normal_modes.h \
                   PolyCEID_initial_rho_electron.h \
                   PolyCEID_initial_conditions.h \
                   PolyCEID_initialise_mu.h \
                   PolyCEID_initialise_state.h

