
#  Copyright (C) 2011 by Lorenzo Stella <lorenzo.stella77@gmail.com>

#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:

#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.

#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

#INCLUDES = -I $(srcdir)/../

noinst_LIBRARIES = libinput.a

libinput_a_SOURCES = \
                   PolyCEID_assign_variable.c \
                   PolyCEID_parsing.c \
                   PolyCEID_field.c \
                   PolyCEID_list.c \
                   PolyCEID_start_file.c \
                   PolyCEID_input_parsing.c

noinst_HEADERS = \
                   PolyCEID_assign_variable.h \
                   PolyCEID_parsing.h \
                   PolyCEID_field.h \
                   PolyCEID_list.h \
                   PolyCEID_start_file.h \
                   PolyCEID_input_parsing.h

