
#  Copyright (C) 2011 by Lorenzo Stella <lorenzo DOT stella77 AT gmail DOT com>

#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:

#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.

#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

#INCLUDES = -I $(srcdir)/../

noinst_LIBRARIES = liboutput.a

liboutput_a_SOURCES = \
                   PolyCEID_output.c \
                   PolyCEID_rho_norm_and_projection.c \
                   PolyCEID_adiabatic_projection.c \
                   PolyCEID_ionic_density.c \
		   PolyCEID_nonadiabatic_coupling.c \
                   PolyCEID_energies.c \
                   PolyCEID_energy_corrections.c \
                   PolyCEID_dipole.c \
                   PolyCEID_dipole_single.c \
                   PolyCEID_single_level_populations.c \
                   PolyCEID_one_body_electronic_density_matrix.c \
                   PolyCEID_one_body_electronic_transition_matrix.c

noinst_HEADERS = \
                   PolyCEID_output.h \
                   PolyCEID_rho_norm_and_projection.h \
                   PolyCEID_adiabatic_projection.h \
                   PolyCEID_ionic_density.h \
		   PolyCEID_nonadiabatic_coupling.h \
                   PolyCEID_energies.h \
                   PolyCEID_energy_corrections.h \
                   PolyCEID_dipole.h \
                   PolyCEID_dipole_single.h \
                   PolyCEID_single_level_populations.h \
                   PolyCEID_one_body_electronic_density_matrix.h \
                   PolyCEID_one_body_electronic_transition_matrix.h

