
#  Copyright (C) 2011-2012 by Lorenzo Stella <lorenzo DOT stella77 AT gmail.com>

#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:

#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.

#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.

#INCLUDES = -I $(srcdir)/../

noinst_LIBRARIES = libstructures.a

libstructures_a_SOURCES = \
                   PolyCEID_structures_constants.c \
                   PolyCEID_structures_electrons.c \
                   PolyCEID_structures_atoms.c \
                   PolyCEID_structures_hamiltonian.c \
                   PolyCEID_structures_thermostat.c \
                   PolyCEID_structures_phonons.c \
                   PolyCEID_structures_observables.c \
                   PolyCEID_structures_state.c \
                   PolyCEID_structures_config.c

noinst_HEADERS = \
                   PolyCEID_structures_constants.h \
                   PolyCEID_structures_electrons.h \
                   PolyCEID_structures_atoms.h \
                   PolyCEID_structures_hamiltonian.h \
                   PolyCEID_structures_thermostat.h \
                   PolyCEID_structures_phonons.h \
                   PolyCEID_structures_observables.h \
                   PolyCEID_structures_state.h \
                   PolyCEID_structures_config.h

